// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTrackAction() should create a new CREATE action. 1`] = `
Object {
  "meta": undefined,
  "payload": Object {
    "entityType": "Track",
    "props": Object {
      "end": 1970-01-01T00:00:00.003Z,
      "id": "123",
      "start": 1970-01-01T00:00:00.001Z,
    },
  },
  "type": "entities/CREATE_ENTITY",
}
`;

exports[`deleteTrackAction() should create a new DELETE action. 1`] = `
Object {
  "meta": undefined,
  "payload": Object {
    "entityType": "Track",
    "id": "123",
  },
  "type": "entities/DELETE_ENTITY",
}
`;

exports[`updateTrackAction() should create a new UPDATE action. 1`] = `
Object {
  "meta": undefined,
  "payload": Object {
    "entityType": "Track",
    "props": Object {
      "id": "123",
      "start": 1970-01-01T00:00:00.002Z,
    },
  },
  "type": "entities/UPDATE_ENTITY",
}
`;
